# tcgdex-database-helper

./: .gitignore  README.md  pyproject.toml  requirements.txt  tcgDex-database-illustrator.py
config/: config.yaml
src/: count-cards-by-illustrator.py
src/CSVs/: illustrator-card-count.csv
src/tcgdex_database_helper/: SSL_tcgDex-database-illustrator.py  __main__.py  config.py  count-cards-by-illustrator.py  count_cards_by_illustrator.py  main.py  tcgDex_database_helper_GUI.py
src/tcgdex_database_helper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tcgdex_database_helper/CSVs/: illustrator_card_count.csv
