[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcgdex_database_helper"
version = "0.1.0"
description = "Helper scripts for cards-database"
authors = [
    { name = "Your Name" }
]
dependencies = ["pyyaml"]

[tool.setuptools.packages.find]
where = ["src"]
