[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcgdex_database_helper"
version = "0.1.0"
description = "Helper app for cards-database completing"
authors = [
    { name = "ThugaPT" }
]
dependencies = ["pyyaml"]

[tool.setuptools.packages.find]
where = ["src"]
